Dodanie wzorca CQRS I Wertykalnej architektury do obłsugi zdjęć z wykorzystaniem azure,    lekkie problemy z obsługą wyjątków pustego zdjecia(do poprawienia jescze przez użycie midleware)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     ports:
       - "5000:5000"
       - "5001:5001"
+    command: ["dotnet", "watch", "--project", "Api", "run"]
 
   database:
     image: postgres:latest
