Add Product Model, add product param model, add endpoint to create Product and add a Command Create Product, Add Migrations

--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Products\Queries\" />
+  </ItemGroup>
+
 </Project>
