--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=products.database;Port=5432;Database=products;Username=postgres;Password=postgres;Include Error Detail=true",
+    "DefaultConnection": "Server=divingshop.database;Database=divingshop;Username=divingshop;Password=divingshop;Include Error Detail=true",
     "Cache": "products.cache:6379",
     "BlobStorage": "UseDevelopmentStorage=true;DevelopmentStorageProxyUri=http://runtrackr-blob-storage;"
   },
