zwracanie wszystkich projektów,  dodawanie projektów,  korekta w modelu projekt date na datetime zamiana Serwis do zwracania linków do zdjęć

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=divingshop.database;Database=divingshop;Username=divingshop;Password=divingshop;Include Error Detail=true",
+    "DefaultConnection": "Host=divingshop.database;Port=5432;Database=divingshop;Username=divingshop;Password=divingshop",
     "Cache": "products.cache:6379",
     "BlobStorage": "UseDevelopmentStorage=true;DevelopmentStorageProxyUri=http://runtrackr-blob-storage;"
   },
